--- a/csci4131/Homework/HW3/static/css/main.dark.css
+++ b/csci4131/Homework/HW3/static/css/main.dark.css
@@ -1,6 +1,6 @@
 body.dark-mode {
     padding-top: 50px;
-    background-color: olivedrab;
+    background-color: rgb(75, 100, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,17 +30,17 @@ body.dark-mode .navbar a {
   
 body.dark-mode .navbar a:hover {
     background-color: #3a3a3a;
-    color: olivedrab;
+    color: rgb(107, 142, 35);
 }
   
 body.dark-mode .navbar a.active {
-    background-color: olive;
+    background-color: rgb(75, 100, 0);
     color: white;
 }
 
 
 body.dark-mode .review {
-    background-color: darkgoldenrod;
+    background-color: rgb(108, 75, 0);
     border-color: rgb(0, 95, 45);
     border: 3px solid;
     border-collapse: collapse;
@@ -51,7 +51,7 @@ body.dark-mode .review {
 }
 
 body.dark-mode iframe {
-    background-color: darkgoldenrod;
+    background-color: rgb(108, 75, 0);;
     border-radius: 5px;
     padding: 5px;
     margin: 5px;
@@ -59,7 +59,7 @@ body.dark-mode iframe {
 
 
 body.dark-mode form {
-    background-color: darkgoldenrod;
+    background-color: rgb(108, 75, 0);;
     border-radius: 5px;
     padding: 10px;
     margin: 5px;
@@ -68,7 +68,7 @@ body.dark-mode form {
 
 /* admincontactlog */
 body.dark-mode tr:nth-child(even) {
-    background-color: olive;
+    background-color: rgb(75, 100, 0);
 }
 
 body.dark-mode tr:nth-child(odd) {
@@ -83,7 +83,7 @@ body.dark-mode table, th, td {
 }
 
 body.dark-mode .content {
-    background-color: darkgoldenrod;
+    background-color: rgb(108, 75, 0);;
     border-radius: 5px;
     padding: 10px;
     margin: 5px;
