--- a/csci4131/Homework/HW6/templates/contactform.pug
+++ b/csci4131/Homework/HW6/templates/contactform.pug
@@ -23,8 +23,8 @@ form(action='/contact' method='post')
       option(value='Gallon') Gallon of Snake Oil
       option(value='Barrel') Barrel of Snake Oil
   .formfield
-    label(for='seller') Already a distributor?
-    input#seller(type='checkbox' name='seller')
+    label(for='distributor') Already a distributor?
+    input#distributor(type='checkbox' name='distributor')
   .formfield
     #price
   .formfield
